My first commit ever Yeah baby

--- a/index.html
+++ b/index.html
@@ -46,43 +46,43 @@
             <div class="tech1 techs">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/2048px-HTML5_logo_and_wordmark.svg.png"
-                alt=""
+                alt="HTML5"
                 class="tech-img"
               />
             </div>
             <div class="tech2 techs">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/1452px-CSS3_logo_and_wordmark.svg.png"
-                alt=""
+                alt="CSS3 logo"
                 class="tech-img tech-size-adjustment"
               />
             </div>
             <div class="tech3 techs">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Javascript-shield.svg/1200px-Javascript-shield.svg.png"
-                alt=""
+                alt="Javascript logo"
                 class="tech-img tech-size-adjustment"
               />
             </div>
             <div class="tech4 techs">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/2560px-Bootstrap_logo.svg.png"
-                alt=""
-                class="tech-img tech-size-adjustment-1"
+                alt="Bootstrap logo"
+                class="tech-size-adjustment-1"
               />
             </div>
             <div class="tech5 techs">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Sass_Logo_Color.svg/2560px-Sass_Logo_Color.svg.png"
-                alt=""
+                alt="Sass logo"
                 class="tech-img tech-size-adjustment-1"
               />
             </div>
             <div class="tech6 techs">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"
-                alt=""
-                class="tech-img tech-size-adjustment-2"
+                alt="React logo"
+                class="tech-size-adjustment-2"
               />
             </div>
           </div>
