added tictactoe to projects

--- a/project.html
+++ b/project.html
@@ -42,10 +42,12 @@
             </p>
           </div>
           <div class="content box2">
-            <img
-              src="https://i.ytimg.com/vi/sNO5awLw9h0/maxresdefault.jpg"
-              class="content-img"
-            />
+            <a href="tictactoe.html">
+              <img
+                src="https://i.ytimg.com/vi/sNO5awLw9h0/maxresdefault.jpg"
+                class="content-img"
+              />
+            </a>
             <p class="content-description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
               nihil quia cupiditate dolores, deleniti illo quaerat provident.
