added command to open game in the tap

--- a/project.html
+++ b/project.html
@@ -42,7 +42,7 @@
             </p>
           </div>
           <div class="content box2">
-            <a href="tictactoe.html">
+            <a href="tictactoe.html" target="_blank">
               <img
                 src="https://i.ytimg.com/vi/sNO5awLw9h0/maxresdefault.jpg"
                 class="content-img"
