added a brief description about the tictactoe game in the project page

--- a/project.html
+++ b/project.html
@@ -49,9 +49,9 @@
               />
             </a>
             <p class="content-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-              nihil quia cupiditate dolores, deleniti illo quaerat provident.
-              Ratione, sapiente facere!
+              I had LOTS of fun building this TicTacToe, I still need to fix a
+              bunch of stuff but here it is so far. I built it with HTML, CSS
+              and Js.
             </p>
           </div>
           <div class="content box3">
