--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="personal-description">
           <h3 class="personal-name">Hi, I am Renan Silva</h3>
           <p>
-            A web developer from New York City. I've been studying web
-            development and programming for about 2 years and last May I decided
-            to quit my job to focus 100% on my studies and do what I love.
+            I'm a web developer. I've been studying web development and
+            programming for about 2 years and last May I decided to quit my job
+            to focus 100% on my studies and do what I love.
           </p>
           <div class="about-img">
             <img
