--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/9ba90abe8d.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Renan s da Silva</title>
+    <title>Renan Silva</title>
   </head>
   <body>
     <div class="main-container">
@@ -29,11 +30,7 @@
       <main class="main-section">
         <div class="personal-description">
           <h3 class="personal-name">Hi, I am Renan Silva</h3>
-          <p>
-            I'm a web developer. I've been studying web development and
-            programming for about 2 years and last May I decided to quit my job
-            to focus 100% on my studies and do what I love.
-          </p>
+          <p>A Web Developer, welcome to my website.</p>
           <div class="about-img">
             <img
               src="https://cdni.iconscout.com/illustration/premium/thumb/web-development-3454628-2918517.png"
