removed command to open in new tab

--- a/project.html
+++ b/project.html
@@ -30,7 +30,7 @@
         <h3 class="main-section-title">Projects</h3>
         <div class="content-section">
           <div class="content box1">
-            <a href="calc.html" target="_blank">
+            <a href="calc.html">
               <img src="calc.png" class="content-img" />
             </a>
             <p class="content-description">
@@ -39,7 +39,7 @@
             </p>
           </div>
           <div class="content box2">
-            <a href="tictactoe.html" target="_blank">
+            <a href="tictactoe.html">
               <img src="tictactoe.png" class="content-img" />
             </a>
             <p class="content-description">
