uptaded some html errors

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <header class="nav-bar">
         <img src="Renan-pic.png" alt="Renan's picture" class="profile-pic" />
         <div class="nav-btn">
-          <button class=""><a href="#">About</a></button>
-          <button class=""><a href="project.html">Projects</a></button>
-          <button class=""><a href="contact.html">Contact</a></button>
+          <a href="#"><button>About</button></a>
+          <a href="project.html"><button>Projects</button></a>
+          <a href="contact.html"><button>Contact</button></a>
         </div>
       </header>
       <main class="main-section">
@@ -112,7 +112,7 @@
             ></a>
           </div>
         </div>
-        <p>&copy Rights 2023</p>
+        <p> &copy; Rights 2023</p>
       </footer>
     </div>
   </body>
