--- a/project.html
+++ b/project.html
@@ -21,9 +21,9 @@
       <header class="nav-bar">
         <img src="Renan-pic.png" alt="Renan's picture" class="profile-pic" />
         <div class="nav-btn">
-          <button class=""><a href="index.html">About</a></button>
-          <button class=""><a href="project.html">Projects</a></button>
-          <button class=""><a href="contact.html">Contact</a></button>
+          <a href="index.html"><button>About</button></a>
+          <a href="#"><button>Projects</button></a>
+          <a href="contact.html"><button>Contact</button></a>
         </div>
       </header>
       <main class="main-section">
